@@ -11,7 +11,7 @@ my %parms = (
     ABSTRACT            => 'Perl::Critic::Bangs - A collection of policies for Perl::Critic',
     PL_FILES            => {},
     PREREQ_PM => {
-        'Perl::Critic'                  => 1.098,
+        'Perl::Critic'                  => 1.122,
         'Perl::Critic::Policy'          => 0,
         'Perl::Critic::PolicyFactory'   => 0,
         'Perl::Critic::PolicyParameter' => 0,
